--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
         </ul>
         <form>
         <input type="hidden">
-        <input type="submit">
+        <input id="submit" type="submit">
     </form>
     </div>
     <div id="ordenes">
