0f mostrando listao de platos

--- a/web/index.html
+++ b/web/index.html
@@ -7,8 +7,7 @@
 <body>
     <div id="platos">
         <ul id="list-platos">
-            <li>Perros</li>
-            <li>Bandeja</li>
+            <p>Cargando...</p>
         </ul>
         <form>
         <input type="hidden">
@@ -23,4 +22,5 @@
         </ul>
     </div>
 </body>
+<script src="/web/main.js"></script>
 </html>
