--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
         </ul>
         <form>
         <input type="hidden">
-        <input id="submit" type="submit">
+        <input id="submit" type="submit" disabled>
     </form>
     </div>
     <div id="ordenes">
