--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
             <p>Cargando...</p>
         </ul>
         <form>
-        <input type="hidden">
+        <input id="plato-id" type="hidden">
         <input id="submit" type="submit" disabled>
     </form>
     </div>
