1f no registra el user_id creando ordenes

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
         <ul id="list-platos">
             <p>Cargando...</p>
         </ul>
-        <form>
+        <form id="order">
         <input id="plato-id" type="hidden">
         <input id="submit" type="submit" disabled>
     </form>
