0f mostrando ordenes desde el servidor

--- a/web/index.html
+++ b/web/index.html
@@ -16,9 +16,7 @@
     </div>
     <div id="ordenes">
         <ul id="list-ordenes">
-            <li>Perro - pepito</li>
-            <li>Bandeja - Andres</li>
-            <li>Perro - Camila</li>
+            <p>Cargando...</p>
         </ul>
     </div>
 </body>
