--- a/web/index.html
+++ b/web/index.html
@@ -7,14 +7,14 @@
 <body>
     <div class="form-main">
         <p id="titleF" class="form-title"><b>Inicia sesión</b></p>
-        <form class="form-login">
+        <form id="form-login" class="form-login">
             <div>
-                <p>Nombre de usuario</p>
-                <input placeholder="Nombre de usuario">
+                <p>Email de usuario</p>
+                <input id="email" placeholder="Correo electronico">
             </div>
             <div>
                 <p>Contraseña</p>
-                <input type="password" placeholder="Contraseña" id="">
+                <input id="password" type="password" placeholder="Contraseña" id="">
             </div>
             <div>
                 <button id="btn">Enviar</button>
