seleccion de plantilla ok

--- a/web/index.html
+++ b/web/index.html
@@ -25,7 +25,7 @@
         </div>
     </template>
     
-    <template id="ordenes-view">
+    <template id="ordenesView">
         <div id="platos">
             <ul id="list-platos">
                 <p>Cargando...</p>
